--- a/style.css
+++ b/style.css
@@ -810,7 +810,7 @@ position: absolute;
             margin-top: 0px; 
             z-index: 3000;
           }
-        #window:hover{
+        #Buildings:hover > #window {
             filter:  saturate(80%) hue-rotate(10deg) brightness(134%) contrast(77%);
         }
         #window:active{
