--- a/style.css
+++ b/style.css
@@ -837,7 +837,7 @@ position: absolute;
             filter:  saturate(80%) hue-rotate(10deg) brightness(134%) contrast(77%);
             opacity: 0.1;
         }
-        #window:active{
+        #Buildings:active > #window{
             filter:  saturate(80%) hue-rotate(10deg) brightness(134%) contrast(77%);
         }
 
